--- a/app/src/main/res/drawable/bottom_rounded_card.xml
+++ b/app/src/main/res/drawable/bottom_rounded_card.xml
@@ -2,14 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <gradient
-        android:endColor="#D0191A"
-        android:centerColor="#F64A44"
-        android:startColor="#F75E59"
-        android:angle="90"/>
+    <solid android:color="@color/primary"/>
 
     <corners
-        android:bottomLeftRadius="35dp"
-        android:bottomRightRadius="35dp" />
+        android:bottomLeftRadius="50dp"
+        android:bottomRightRadius="50dp" />
 
 </shape>
