--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -20,7 +20,7 @@
 
         <TextView
             android:layout_marginHorizontal="20dp"
-            android:layout_marginVertical="20dp"
+            android:layout_marginVertical="30dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Santiago, programa una tarea"
@@ -31,15 +31,15 @@
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_marginHorizontal="20dp"
-            android:layout_height="220dp"
-            android:background="@color/white"
-            app:cardCornerRadius="15dp">
-
+            android:layout_marginHorizontal="50dp"
+            android:layout_marginTop="20dp"
+            android:layout_height="50dp"
+            android:padding="0dp"
+            app:cardCornerRadius="10dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="50dp">
+                android:layout_height="match_parent">
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/timer"
@@ -48,9 +48,12 @@
                     app:layout_constraintEnd_toStartOf="@+id/quickBreak"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    android:background="@android:color/transparent"
+                    android:background="@color/secondary"
+                    android:minHeight="0dp"
+                    android:minWidth="0dp"
                     android:textAllCaps="false"
                     android:fontFamily="@font/nunito_bold"
+                    android:textColor="@color/white"
                     android:text="Timer"/>
 
 
@@ -61,9 +64,11 @@
                     app:layout_constraintEnd_toStartOf="@id/longBreak"
                     app:layout_constraintStart_toEndOf="@+id/timer"
                     app:layout_constraintTop_toTopOf="parent"
-                    android:background="@android:color/transparent"
+                    android:background="@color/secondary"
+                    android:elevation="0dp"
                     android:textAllCaps="false"
                     android:fontFamily="@font/nunito_bold"
+                    android:textColor="@color/white"
                     android:text="Descanso corto"/>
 
 
@@ -75,10 +80,10 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/quickBreak"
                     app:layout_constraintTop_toTopOf="parent"
-                    android:background="@android:color/transparent"
+                    android:background="@color/secondary"
                     android:textAllCaps="false"
                     android:fontFamily="@font/nunito_bold"
-                    android:elevation="15dp"
+                    android:textColor="@color/white"
                     android:text="Descanso largo"/>
 
 
